Make bootstrap navbar fixed top and add truncatechars to post title in blog template

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@
 
 body {
     background-color: #F9FAFC;
+    padding-top: 65px;
 }
 
 /* Navigation */
